[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "firstlumpycomputationallinguistics"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
numpy = "^1.18"
matplotlib = "^3.2"
plotly = "^4.7"
geopandas = "^0.7.0"
[tool.poetry.dev-dependencies]
